--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode production",
-    "serve": "webpack serve --progress --color",
-    "watch": "webpack --watch"
-  },
+  "author": "Volosyuk Daniil",
+  "license": "ISC",
+  "homepage": "https://github.com/danyavol/2d-platformer#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/danyavol/2d-platformer.git"
   },
-  "author": "Volosyuk Daniil",
-  "license": "ISC",
-  "homepage": "https://github.com/danyavol/2d-platformer#readme",
+  "scripts": {
+    "watch": "webpack --watch --mode production",
+    "serve": "node dev-server.js",
+    "build": "webpack --mode production"
+  },
   "devDependencies": {
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "express": "^4.17.1"
   }
 }
