--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "express": "^4.17.1",
+    "rxjs": "^7.2.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2",
-    "express": "^4.17.1"
+    "webpack-cli": "^4.7.2"
   }
 }
