--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "2d-platformer",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/platformer-2d.js",
   "author": "Volosyuk Daniil",
   "license": "ISC",
   "homepage": "https://github.com/danyavol/2d-platformer#readme",
@@ -11,15 +11,15 @@
     "url": "git+https://github.com/danyavol/2d-platformer.git"
   },
   "scripts": {
-    "watch": "webpack --watch --mode production",
-    "serve": "node dev-server.js",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
     "build": "webpack --mode production"
   },
   "devDependencies": {
-    "express": "^4.17.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
