--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Build
         run: |
           npm install
